--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albin Wrebo</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header><h1>Albin Wrebo</h1></header>
-    <main><section></section></main>
+    <header><h1>Albin Wrebo</h1>
+    <h2>Fullstack Open Source Developer</h2></header>
+    <main><section><p>test</p></section></main>
     <aside></aside>
     <footer></footer>
 </body>
