--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albin Wrebo @ before AW</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="Media/styles/main.css">
   </head>
 
-  <body class="flex">
+  <body>
+    <div class="flex">
     <div>
       <div class="width grid g-navbar">
         <header class="g-h">header</header>
@@ -16,103 +17,113 @@
     </div>
     <div class="width">
       <main>
-        <section class="grid g-2obj">
-          <article class="g-pre">1</article>
-          <article class="g-pic">2</article>
+        <section class="width presenter grid g-2obj">
+          <div class="flex j-c g-pre blk-75"><div class="flex"><h1 class="t-c t-or-75">Hi & Welcome!</h1>
+            <h2 class="t-c">I am <span class="t-or-75">Albin Werbo</span></h2>
+            <p class="t-c">Currently studying Fullstack Open Source <br>at Chas Academy</p>
+          </div>
+          </div>
+          <div class="flex g-pic">
+            <div class="pic gradient"><p class="t-c">Albin Wrebo <br>
+            albin.wrebo@outlook.com <br>
+            (+46) 070 559 04 27 <br></p></div></div>
         </section>
-        <section>
-          <h3>about me</h3>
+        <section class="wt-75">
+          <h3 class="t-blk-100">About me</h3>
           <div class="grid g-3">
-            <article>
+            <article class="content flex blk-100">
               <figure><img src="Media/Pictures/tech-img.png" alt="tech"></figure>
-              <h4>the tech</h4>
+              <h4 class="t-or-75">The Tech</h4>
             </article>
-            <article>
+            <article class="content flex blk-100">
               <figure><img src="Media/Pictures/scout-img.png" alt="scout"></figure>
-              <h4>the scout</h4>
+              <h4 class="t-or-75">The Scout</h4>
             </article>
-            <article>
+            <article class="content flex blk-100">
               <figure><img src="Media/Pictures/music-img.png" alt="musician"></figure>
-              <h4>the musican</h4>
+              <h4 class="t-or-75">The Musican</h4>
             </article>
           </div>
         </section>
-        <section>
-          <h3>skills</h3>
+        <section class="blk-75">
+          <h3 class="t-or-75">Skills</h3>
           <div class="grid g-3">
-            <article>
+            <div class="content">
               <table>
                 <tbody>
                   <tr>
                     <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
+                    <td><figure><img src="Media/Pictures/css-img-o.png" alt="css"></figure></td>
+                    <td><figure><img src="Media/Pictures/sass-img-o.png" alt="sass"></figure></td>
                   </tr>
                   <tr>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
+                    <td><figure><img src="Media/Pictures/git-img-o.png" alt="git"></figure></td>
+                    <td><figure><img src="Media/Pictures/github-img-o.png" alt="github"></figure></td>
+                    <td><figure><img src="Media/Pictures/vscode-img-o.png" alt="vscode"></figure></td>
                   </tr>
                 </tbody>
               </table>
-            </article>
-            <article>
+            </div>
+            <div class="content">
               <table>
                 <tbody>
                   <tr>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
+                    <td><figure><img src="Media/Pictures/figma-img-o.png" alt="figma"></figure></td>
+                    <td><figure><img src="Media/Pictures/react-img.png" alt="react"></figure></td>
+                    <td><figure><img src="Media/Pictures/php-img.png" alt="php"></figure></td>
                   </tr>
                   <tr>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
+                    <td><figure><img src="Media/Pictures/docker-img.png" alt="docker"></figure></td>
+                    <td><figure><img src="Media/Pictures/laravel-img.png" alt="laravel"></figure></td>
+                    <td><figure><img src="Media/Pictures/javascript-img.png" alt="javascript"></figure></td>
                   </tr>
                 </tbody>
               </table>
-            </article>
-            <article>
+            </div>
+            <div class="content">
               <table>
                 <tbody>
                   <tr>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
+                    <td><figure><img src="Media/Pictures/typescript-img.png" alt="typescript"></figure></td>
+                    <td><figure><img src="Media/Pictures/express-img.png" alt="express"></figure></td>
+                    <td><figure><img src="Media/Pictures/mongodb-img.png" alt="mongodb"></figure></td>
                   </tr>
                   <tr>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
-                    <td><figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure></td>
+                    <td><figure><img src="Media/Pictures/jquery-img.png" alt="jquery"></figure></td>
+                    <td><figure><img src="Media/Pictures/angular-img.png" alt="angular"></figure></td>
+                    <td></td>
                   </tr>
                 </tbody>
               </table>
-            </article>
+            </div>
           </div>
         </section>
-        <section>
-          <h3>Projects</h3>
+        <section class="wt-75">
+          <h3 class="t-blk-100">Projects</h3>
           <div class="grid g-3">
-            <article></article>
-            <article></article>
-            <article></article>
+            <div class="content flex blk-100"></div>
+            <div class="content flex blk-100"></div>
+            <div class="content flex blk-100"></div>
           </div>
         </section>
-        <section>
-          <h3>Contact me</h3>
-          <article>
+        <section class="blk-75">
+          <h3 class="t-or-75">Contact me</h3>
+          <div class="flex">
+          <div class="content flex j-c">
             <form>
-              <input type="text" id="name" value="Name" /><br /><br />
-              <input type="text" id="email" value="Email" /><br /><br />
-              <input type="text" id="subject" value="Subject" /><br /><br />
+              <input type="text" id="name" value="Name"><br><br>
+              <input type="text" id="email" value="Email"><br><br>
+              <input type="text" id="subject" value="Subject"><br><br>
               <textarea name="message" rows="10" cols="30">Message</textarea
-              ><br /><br />
-              <input type="submit" value="Submit" />
+              ><br><br>
+              <input type="submit" value="Submit">
             </form>
-          </article>
+          </div>
+        </div>
         </section>
       </main>
       <footer>footer</footer>
     </div>
+  </div>
   </body>
 </html>
