--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-  <div class="flex">
-    <div>
-      <div class="width grid g-navbar">
-        <header class="g-h">header</header>
-        <nav class="g-n">nav</nav>
+  <div class="flex" id="top">
+    <div class="width fixed">
+      <div class="width grid g-navbar blk-100 fixed">
+        <header class="g-h"><a href="#top"><img src="Media/Icons/Logo.svg" alt=""></a></header>
+        <nav class="g-n flex-r"><a href="#about"><button class="nav-b or-75">About</button></a><a href="#skill"><button
+            class="nav-b or-75">Skills</button></a><a href="#project"><button class="nav-b or-75">Projects</button></a><a href="#contact"><button
+            class="nav-b or-75">Contact</button></a></nav>
       </div>
     </div>
     <div class="width">
@@ -28,33 +30,36 @@
           </div>
           <div class="flex g-pic">
             <div class="flex j-c">
-            <div class="pic gradient corner-1-3">
-              <figure><img class="p-pic" src="Media/Pictures/profilepic.jpg" alt="profilepic" width="280"></figure>
-              <p class="t-c">Albin Wrebo <br>
-                albin.wrebo@outlook.com <br>
-                (+46) 070 559 04 27 <br></p>
+              <div class="pic gradient corner-1-3">
+                <figure><img class="p-pic" src="Media/Pictures/profilepic.jpg" alt="profilepic" width="280"></figure>
+                <p class="t-c">Albin Wrebo <br>
+                  albin.wrebo@outlook.com <br>
+                  (+46) 070 559 04 27 <br></p>
+              </div>
             </div>
           </div>
-          </div>
         </section>
-        <section class="wt-75">
+        <section class="wt-75 scr-mar" id="about">
           <h3 class="t-blk-100">About me</h3>
           <div class="grid g-3">
-            <article class="content flex blk-100 corner-1-3">
+            <article class="content flex blk-100 corner-1-3 b-sha">
               <figure><img src="Media/Pictures/tech-img.png" alt="tech"></figure>
               <h4 class="t-or-75">The Tech</h4>
+              <p class="t-c">Stands for learning the future of technology</p>
             </article>
-            <article class="content flex blk-100 corner-1-3">
+            <article class="content flex blk-100 corner-1-3 b-sha">
               <figure><img src="Media/Pictures/scout-img.png" alt="scout"></figure>
               <h4 class="t-or-75">The Scout</h4>
+              <p class="t-c">Stands for teamwork and leadership.</p>
             </article>
-            <article class="content flex blk-100 corner-1-3">
+            <article class="content flex blk-100 corner-1-3 b-sha">
               <figure><img src="Media/Pictures/music-img.png" alt="musician"></figure>
               <h4 class="t-or-75">The Musican</h4>
+              <p class="t-c">Stands for creativite and passion.</p>
             </article>
           </div>
         </section>
-        <section class="blk-75">
+        <section class="blk-75 scr-mar" id="skill">
           <h3 class="t-or-75">Skills</h3>
           <div class="grid g-3">
             <div class="content">
@@ -141,15 +146,15 @@
             </div>
           </div>
         </section>
-        <section class="wt-75">
+        <section class="wt-75 scr-mar" id="project">
           <h3 class="t-blk-100">Projects</h3>
           <div class="grid g-3">
-            <div class="content flex blk-100 corner-1-3"></div>
-            <div class="content flex blk-100 corner-1-3"></div>
-            <div class="content flex blk-100 corner-1-3"></div>
+            <div class="content flex blk-100 corner-1-3 b-sha"></div>
+            <div class="content flex blk-100 corner-1-3 b-sha"></div>
+            <div class="content flex blk-100 corner-1-3 b-sha"></div>
           </div>
         </section>
-        <section class="blk-75">
+        <section class="blk-75 scr-mar" id="contact">
           <h3 class="t-or-75">Contact me</h3>
           <div class="flex">
             <div class="content flex j-c">
@@ -157,14 +162,16 @@
                 <input type="text" id="name" value="Name"><br><br>
                 <input type="text" id="email" value="Email"><br><br>
                 <input type="text" id="subject" value="Subject"><br><br>
-                <textarea name="message" rows="10" cols="30">Message</textarea><br><br>
+                <input type="text" id="message" value="Message"><br><br>
                 <input type="submit" value="Submit">
               </form>
             </div>
           </div>
         </section>
       </main>
-      <footer>footer</footer>
+      <footer class="t-c">
+        <p>© 2024 Albin Wrebo @ before AW, All rights reserved.</p>
+      </footer>
     </div>
   </div>
 </body>
