--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <div class="width fixed">
       <div class="width grid g-navbar blk-100 fixed">
         <header class="g-h"><a href="#top"><img src="Media/Icons/Logo.svg" alt=""></a></header>
-        <nav class="g-n flex-r"><a href="#about"><button class="nav-b or-75">About</button></a><a href="#skill"><button
-            class="nav-b or-75">Skills</button></a><a href="#project"><button class="nav-b or-75">Projects</button></a><a href="#contact"><button
-            class="nav-b or-75">Contact</button></a></nav>
+        <nav class="g-n flex-r"><a href="#about" class="nav-b or-75">About</a><a href="#skill"
+            class="nav-b or-75">Skill</a><a href="#project" class="nav-b or-75">Projects</a><a href="#contact"
+            class="nav-b or-75">Contact</a>
+        </nav>
       </div>
     </div>
     <div class="width">
@@ -35,6 +36,13 @@
                 <p class="t-c">Albin Wrebo <br>
                   albin.wrebo@outlook.com <br>
                   (+46) 070 559 04 27 <br></p>
+                <div class="flex-r j-c"><a href="https://www.linkedin.com/in/albin-wrebo-94233996/" target="_blank">
+                    <figure><img src="Media/Icons/linkedin.svg" alt="LinkedIn"></figure>
+                  </a>
+                  <figure><img src="Media/Icons/slash.svg" alt="slash"></figure><a href="https://github.com/beforeAW"  target="_blank">
+                    <figure><img src="Media/Icons/github-small.svg" alt="github"></figure>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -43,17 +51,17 @@
           <h3 class="t-blk-100">About me</h3>
           <div class="grid g-3">
             <article class="content flex blk-100 corner-1-3 b-sha">
-              <figure><img src="Media/Pictures/tech-img.png" alt="tech"></figure>
+              <figure><img src="Media/Icons/Tech.svg" alt="tech"></figure>
               <h4 class="t-or-75">The Tech</h4>
               <p class="t-c">Stands for learning the future of technology</p>
             </article>
             <article class="content flex blk-100 corner-1-3 b-sha">
-              <figure><img src="Media/Pictures/scout-img.png" alt="scout"></figure>
+              <figure><img src="Media/Icons/Scout.svg" alt="scout"></figure>
               <h4 class="t-or-75">The Scout</h4>
               <p class="t-c">Stands for teamwork and leadership.</p>
             </article>
             <article class="content flex blk-100 corner-1-3 b-sha">
-              <figure><img src="Media/Pictures/music-img.png" alt="musician"></figure>
+              <figure><img src="Media/Icons/music.svg" alt="musician"></figure>
               <h4 class="t-or-75">The Musican</h4>
               <p class="t-c">Stands for creativite and passion.</p>
             </article>
@@ -67,52 +75,24 @@
                 <tbody>
                   <tr>
                     <td>
-                      <figure><img src="Media/Pictures/html-img-o.png" alt="Html5"></figure>
+                      <figure><img src="Media/Icons/html-o.svg" alt="Html5"></figure>
                     </td>
                     <td>
-                      <figure><img src="Media/Pictures/css-img-o.png" alt="css"></figure>
+                      <figure><img src="Media/Icons/css-o.svg" alt="css"></figure>
                     </td>
                     <td>
-                      <figure><img src="Media/Pictures/sass-img-o.png" alt="sass"></figure>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <figure><img src="Media/Pictures/git-img-o.png" alt="git"></figure>
-                    </td>
-                    <td>
-                      <figure><img src="Media/Pictures/github-img-o.png" alt="github"></figure>
-                    </td>
-                    <td>
-                      <figure><img src="Media/Pictures/vscode-img-o.png" alt="vscode"></figure>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="content">
-              <table>
-                <tbody>
-                  <tr>
-                    <td>
-                      <figure><img src="Media/Pictures/figma-img-o.png" alt="figma"></figure>
-                    </td>
-                    <td>
-                      <figure><img src="Media/Pictures/react-img.png" alt="react"></figure>
-                    </td>
-                    <td>
-                      <figure><img src="Media/Pictures/php-img.png" alt="php"></figure>
+                      <figure><img src="Media/Icons/sass-o.svg" alt="sass"></figure>
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      <figure><img src="Media/Pictures/docker-img.png" alt="docker"></figure>
+                      <figure><img src="Media/Icons/git-o.svg" alt="git"></figure>
                     </td>
                     <td>
-                      <figure><img src="Media/Pictures/laravel-img.png" alt="laravel"></figure>
+                      <figure><img src="Media/Icons/github-o.svg" alt="github"></figure>
                     </td>
                     <td>
-                      <figure><img src="Media/Pictures/javascript-img.png" alt="javascript"></figure>
+                      <figure><img src="Media/Icons/vscode-o.svg" alt="vscode"></figure>
                     </td>
                   </tr>
                 </tbody>
@@ -123,21 +103,49 @@
                 <tbody>
                   <tr>
                     <td>
-                      <figure><img src="Media/Pictures/typescript-img.png" alt="typescript"></figure>
+                      <figure><img src="Media/Icons/figma-o.svg" alt="figma"></figure>
                     </td>
                     <td>
-                      <figure><img src="Media/Pictures/express-img.png" alt="express"></figure>
+                      <figure><img src="Media/Icons/react.svg" alt="react"></figure>
                     </td>
                     <td>
-                      <figure><img src="Media/Pictures/mongodb-img.png" alt="mongodb"></figure>
+                      <figure><img src="Media/Icons/php.svg" alt="php"></figure>
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      <figure><img src="Media/Pictures/jquery-img.png" alt="jquery"></figure>
+                      <figure><img src="Media/Icons/docker.svg" alt="docker"></figure>
                     </td>
                     <td>
-                      <figure><img src="Media/Pictures/angular-img.png" alt="angular"></figure>
+                      <figure><img src="Media/Icons/laravel.svg" alt="laravel"></figure>
+                    </td>
+                    <td>
+                      <figure><img src="Media/Icons/js.svg" alt="javascript"></figure>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="content">
+              <table>
+                <tbody>
+                  <tr>
+                    <td>
+                      <figure><img src="Media/Icons/ts.svg" alt="typescript"></figure>
+                    </td>
+                    <td>
+                      <figure><img src="Media/Icons/express.svg" alt="express"></figure>
+                    </td>
+                    <td>
+                      <figure><img src="Media/Icons/mongodb.svg" alt="mongodb"></figure>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <figure><img src="Media/Icons/jquery.svg" alt="jquery"></figure>
+                    </td>
+                    <td>
+                      <figure><img src="Media/Icons/angular.svg" alt="angular"></figure>
                     </td>
                     <td></td>
                   </tr>
@@ -149,21 +157,28 @@
         <section class="wt-75 scr-mar" id="project">
           <h3 class="t-blk-100">Projects</h3>
           <div class="grid g-3">
-            <div class="content flex blk-100 corner-1-3 b-sha"></div>
-            <div class="content flex blk-100 corner-1-3 b-sha"></div>
-            <div class="content flex blk-100 corner-1-3 b-sha"></div>
+            <div class="content flex blk-100 corner-1-3 b-sha">
+              <p>Work</p>
+            </div>
+            <div class="content flex blk-100 corner-1-3 b-sha">
+              <p>In</p>
+              <video src="Media/Video/loadingbar.mp4" controls></video>
+            </div>
+            <div class="content flex blk-100 corner-1-3 b-sha">
+              <p>Progress</p>
+            </div>
           </div>
         </section>
         <section class="blk-75 scr-mar" id="contact">
           <h3 class="t-or-75">Contact me</h3>
           <div class="flex">
             <div class="content flex j-c">
-              <form>
+              <form action="mailto:albin.wrebo@outlook.com" method="post" enctype="text/plain">
                 <input type="text" id="name" value="Name"><br><br>
                 <input type="text" id="email" value="Email"><br><br>
                 <input type="text" id="subject" value="Subject"><br><br>
-                <input type="text" id="message" value="Message"><br><br>
-                <input type="submit" value="Submit">
+                <textarea id="text" name="textarea" rows="5" cols="31">Message</textarea><br><br>
+                <input type="submit" value="Send" class="sub-b or-75">
               </form>
             </div>
           </div>
